--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,14 +1,18 @@
 name: GitHub Actions Demo
 
-on: 
+---
+on:
   push:
-    branches: [ Main ]
-    branches-ignore: [.github/**]
+    branches:
+      - Main
+    branches-ignore:
+      - .github/**
   pull_request:
-    branches: [ Main ]
+    branches:
+      - Main
   schedule:
-    - cron: '15 6 * * 0'
-  workflow_dispatch:
+    - cron: 15 6 * * 0
+  workflow_dispatch: null
     
 jobs:
   Build:
