--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,18 +1,14 @@
 name: GitHub Actions Demo
 
----
 on:
   push:
-    branches:
-      - Main
-    branches-ignore:
-      - .github/**
+    branches: [ main ]
+    paths-ignore: [.github/**]
   pull_request:
-    branches:
-      - Main
+    branches: [ main ]
   schedule:
-    - cron: 15 6 * * 0
-  workflow_dispatch: null
+    - cron: '15 6 * * 0'
+  workflow_dispatch:
     
 jobs:
   Build:
